<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:layout_marginTop="?attr/actionBarSize">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Base.TextAppearance.AppCompat.Headline"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/thanks_page_msg1" />

    <TextView
        android:id="@+id/totalApproxCash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thanks_page_price"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/thanks_page_msg2" />
    <View
        android:layout_width="match_parent"
        android:layout_height="30dp"/>

    <Button
        android:id="@+id/btnSubmitForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sign_up_selector_bg"
        android:textColor="@color/sign_up_selector_fg"
        android:text="Setuju"/>

</LinearLayout>