<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/calculator_input_padding"
    android:scrollbars="horizontal">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnSubmitForm"
        android:layout_marginBottom="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="@dimen/calculator_devider_space"
                android:layout_marginTop="@dimen/calculator_devider_space"
                android:background="@color/shadow_clr"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Ringkasan"
                android:textAlignment="center"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="@dimen/calculator_devider_space"
                android:layout_marginTop="@dimen/calculator_devider_space"
                android:background="@color/shadow_clr"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Layanan"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/selectedLayanan"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="Selected Layanan" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Lokasi"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/selectedLokasi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Selected Lokasi" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/transparentColor" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Posisi GPS"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/selectedGPSPos"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="(latitude, longitude)" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Keterangan Lokasi"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/selectedKetLokasi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Info Lokasi" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/transparentColor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Tanggal Layanan"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/selectedTanggal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="Selected Date" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Waktu Layanan"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/selectedJamLayanan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Selected Time" />
            </LinearLayout>

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/thanks_page_msg1"
                android:textAlignment="center"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/thanks_page_msg2"
                android:textAlignment="center"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/downPayment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/theme_orange"
                android:text="@string/thanks_page_price"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/thanks_page_msg3"
                android:textAlignment="center"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/totalApproxCash"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/thanks_page_price"
                android:textColor="@color/theme_green"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/thanks_page_msg4"
                android:textAlignment="center"
                android:textSize="12sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/thanks_page_msg5"
                android:textAlignment="center"
                android:textSize="12sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="30dp" />

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btnSubmitForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sign_up_selector_bg"
        android:hint="Setuju"
        android:layout_alignParentBottom="true"
        android:textColorHint="@color/sign_up_selector_fg" />

</RelativeLayout>